# moss-samples

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  example_usage.py  package-lock.json  package.json  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  langchain-release.yml
Backend/: agent.py  pyproject.toml  settings.py  token_server.py
Frontend/: package-lock.json  package.json
Frontend/pages/: _document.tsx  index.json  index.tsx
Frontend/pages/components/: About.tsx  Contact.tsx  ContactForm.tsx  Footer.tsx  Header.tsx  Hero.tsx  Projects.tsx  ThemeToggle.tsx
Frontend/styles/: globals.css
cookbook/dspy/: dspy.ipynb
cookbook/langchain/: README.md  moss_langchain.ipynb  moss_langchain.py  pyproject.toml  test_integration.py
javascript/: .eslintrc.json  .gitignore  README-CLUSTERING.md  README.md  clustering.ts  comprehensive_sample.ts  create-conversation-indexes.ts  custom_embedding_sample.ts  document-cluster-example.ts  eslint.config.mjs  load_and_query_sample.ts  package-lock.json  package.json  subset-cluster-example.ts  tsconfig.json
javascript/data/conversations/: conversation-1004371.0.json  conversation-1066672.0.json  conversation-1085984.0.json  conversation-1098568.0.json  conversation-1100985.0.json  conversation-1137303.0.json  conversation-1155134.0.json  conversation-1159333.0.json  conversation-1262637.0.json  conversation-132447.0.json  conversation-1351779.0.json  conversation-1402869.0.json  conversation-145769.0.json  conversation-1461541.0.json  conversation-1505335.0.json  conversation-1548362.0.json  conversation-1549415.0.json  conversation-1553854.0.json  conversation-1558924.0.json  conversation-1581379.0.json  conversation-1588083.0.json  conversation-1604984.0.json  conversation-1608108.0.json  conversation-1639316.0.json  conversation-1664472.0.json  conversation-1701279.0.json  conversation-1728605.0.json  conversation-1736152.0.json  conversation-1827028.0.json  conversation-1843546.0.json  conversation-18709.0.json  conversation-189528.0.json  conversation-1932431.0.json  conversation-197677.0.json  conversation-206104.0.json  conversation-2110277.0.json  conversation-2124882.0.json  conversation-2187543.0.json  (+78 more)
livekit-agent/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  create_index.py  pyproject.toml  settings.py  streaming_api.py  supervisord.conf  token_server.py
livekit-agent(SupportAgent)/: README.md  agent.py
livekit-agent-Inpersona/: .env.example  .gitignore  agent.py  create_index.py  life.json  main.py  pyproject.toml  settings.py
livekit-agent-Inpersona/react-app/: index.html
livekit-agent-TalkToPdf/: create_index.py  settings.py  tool.py
livekit-agent/react-app/: .gitignore  index.html  package-lock.json  package.json
livekit-agent/react-app/src/components/: VoiceAgent.css  VoiceAgent.jsx
livekit-moss-vercel/: README.md
livekit-moss-vercel/agent-react/: package.json  pnpm-lock.yaml
next-js/: .env.example  README.md  package-lock.json  package.json
next-js/app/: actions.ts  globals.css  page.tsx
pipecat-moss/pipecat-quickstart/: .gitignore  Dockerfile  README.md  bot.py  client.py  create-index.py  env.example  pcc-deploy.toml  pyproject.toml  retrieval.py
python/: .env.template  .gitignore  README.md  comprehensive_sample.py  create_index.py  custom_embedding_sample.py  custom_embeddings.py  faq-query.py  faqs.json  lightberry.json  load_and_query_sample.py  requirements.txt  temp.py
vitepress-plugin-moss/: .gitignore  README.md  Search.vue  SearchButton.vue  index.ts  indexing.ts  package.json  pnpm-lock.yaml  tsconfig.json  types.ts  vite.config.ts
(+20 files in other folders)
