[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inferedge-moss>=1.0.0b5",
    "livekit-agents[silero,turn-detector]~=1.2",
    "livekit-plugins-cartesia>=1.2.15",
    "livekit-plugins-deepgram>=1.2.15",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai>=1.2.15",
    "python-dotenv>=1.2.1",
]
